# BinanceTrader

./: MODULE.bazel  README.md  go.work
BinanceAPI/common/: BUILD  endpoint.go  enums.go  go.mod  parse.go
BinanceAPI/klines/: BUILD  go.mod  listklines.go
BinanceAPI/storage/: BUILD  go.mod  klinecsv.go
BinanceAPI/testbins/: BUILD  gethistoricalklines.go  go.mod
MLTrader/prepare_dataset/: prepare.py
price_data/BTCUSDT/: BTCUSDT_12h.csv  BTCUSDT_1d.csv  BTCUSDT_4h.csv
price_data/ETHUSDT/: ETHUSDT_12h.csv  ETHUSDT_1d.csv  ETHUSDT_4h.csv
price_data/SOLUSDT/: SOLUSDT_12h.csv  SOLUSDT_1d.csv  SOLUSDT_4h.csv
price_data/SUIUSDT/: SUIUSDT_12h.csv  SUIUSDT_1d.csv  SUIUSDT_1h.csv  SUIUSDT_4h.csv
price_data/XRPUSDT/: XRPUSDT_12h.csv  XRPUSDT_1d.csv  XRPUSDT_4h.csv
